<resources>
    <string name="app_name">COCOMO-II Simulator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="via_sloc_source_lines_of_code">Via SLOC (Source Lines of Code)</string>
    <string name="via_fp_function_point">Via FP (Function Point)</string>
    <string name="choose_any_option_for_calculation_of_cost">Choose any option for calculation of cost:</string>
    <string name="created_by_saarthak_gupta">Created By: Saarthak Gupta</string>
    <string name="calculate">Calculate</string>
    <string name="history">History</string>
    <string name="important">Important</string>
    <string name="new_calculation">New Calculation</string>
    <string name="choose_the_programming_language">Choose programming language:</string>
    <string name="fp">FP</string>
    <string name="language_factor">Language Factor: 53</string>
    <string name="cost_drivers">Cost Drivers</string>
    <string name="scale_factors">Scale Factors</string>
    <string name="mark_as_important">Mark as Important</string>
</resources>
