<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CalculateFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_8x"
            android:text="@string/choose_any_option_for_calculation_of_cost"
            android:textSize="@dimen/text_32x" />

        <Button
            android:id="@+id/sloc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_32x"
            android:layout_marginTop="@dimen/dimen_64x"
            android:layout_weight="2"
            android:layout_marginRight="@dimen/dimen_32x"
            android:layout_marginBottom="@dimen/dimen_64x"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/paprika"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/via_sloc_source_lines_of_code"
            android:textColor="@color/cardview_light_background"
            android:textSize="@dimen/text_16x"
            tools:ignore="PrivateResource"
            tools:targetApi="m" />

        <Button
            android:id="@+id/fp"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_32x"
            android:layout_marginTop="@dimen/dimen_64x"
            android:layout_marginRight="@dimen/dimen_32x"
            android:layout_marginBottom="@dimen/dimen_64x"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/paprika"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/via_fp_function_point"
            android:textColor="@color/cardview_light_background"
            android:textSize="@dimen/text_16x"
            tools:targetApi="m" />
    </LinearLayout>

</FrameLayout>