<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/MainFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="#68A8A3"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.MainActivity"
        tools:showIn="@layout/app_bar_main">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:padding="@dimen/dimen_8x"
                android:text="@string/choose_any_option_for_calculation_of_cost"
                android:textSize="@dimen/text_32x" />

            <Button
                android:id="@+id/sloc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_32x"
                android:layout_marginTop="@dimen/dimen_64x"
                android:layout_marginRight="@dimen/dimen_32x"
                android:layout_marginBottom="@dimen/dimen_64x"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-medium"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/via_sloc_source_lines_of_code"
                android:textColor="@color/cardview_light_background"
                android:textSize="@dimen/text_16x"
                android:textStyle="bold|italic"
                tools:ignore="PrivateResource"
                tools:targetApi="m" />

            <Button
                android:id="@+id/fp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_32x"
                android:layout_marginTop="@dimen/dimen_64x"
                android:layout_marginRight="@dimen/dimen_32x"
                android:layout_marginBottom="@dimen/dimen_64x"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-black"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/via_fp_function_point"
                android:textColor="@color/cardview_light_background"
                android:textSize="@dimen/text_16x"
                android:textStyle="bold|italic"
                tools:targetApi="m" />
        </LinearLayout>

    </FrameLayout>
</layout>
